[gd_scene load_steps=6 format=3 uid="uid://1pgodd1iwkfl"]

[ext_resource type="StyleBox" uid="uid://v5ms7im75c03" path="res://ui/play_menu/map_button/base_map_button.tres" id="1_x6bhb"]
[ext_resource type="StyleBox" uid="uid://crsrmgeamv0mu" path="res://ui/play_menu/map_button/focus_map_button.tres" id="2_qtuyw"]
[ext_resource type="Script" path="res://ui/play_menu/map_button/map_button.gd" id="3_u7umh"]
[ext_resource type="StyleBox" uid="uid://b47gnbmgc702f" path="res://ui/play_menu/map_button/selected_map_button.tres" id="4_rka7q"]
[ext_resource type="Texture2D" uid="uid://di6vs1fxkyj4k" path="res://icon.svg" id="5_dj5yo"]

[node name="MapButton" type="Button"]
custom_minimum_size = Vector2(345, 86)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -935.0
offset_bottom = -714.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = ExtResource("1_x6bhb")
theme_override_styles/hover = ExtResource("2_qtuyw")
theme_override_styles/focus = ExtResource("2_qtuyw")
script = ExtResource("3_u7umh")

[node name="SelectedBackground" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("4_rka7q")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -151.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2

[node name="MapPreview" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_dj5yo")
expand_mode = 3
stretch_mode = 4

[node name="MapName" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Map Name"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -118.0
offset_top = 7.0
offset_right = -6.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 2

[node name="BestTimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Best Time"

[node name="BestTime" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "00:00:00"
horizontal_alignment = 2

[connection signal="pressed" from="." to="." method="_on_pressed"]
